<resources>
    <string name="app_name">Fintech75</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Ingresar</string>
    <string name="sign_up">Registrarse</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="logo">Logo</string>
    <string name="calendar">calendario</string>
    <string name="loading">Cargando…</string>
    <string name="canceling">Cancelando…</string>
    <string name="setting_bluetooth">Configurando Bluetooth…</string>
    <string name="capturing_fingerprint">Capturando huella…</string>
    <string name="verifying_fingerprint">Verificando huella…</string>
    <string name="registration">Registro</string>
    <string name="fingerprint_registration">Registrar Huella</string>
    <string name="user_type">Tipo de usuario</string>
    <string name="client">Cliente</string>
    <string name="market">Establecimiento</string>
    <string name="save">Guardar</string>
    <string name="name_s">Nombre(s)</string>
    <string name="last_name_s">Apellido(s)</string>
    <string name="email">Correo electrónico</string>
    <string name="phone">Teléfono</string>
    <string name="birth_date">Fecha de nacimiento</string>
    <string name="age">Edad</string>
    <string name="password">Contraseña</string>
    <string name="check_password">Verificar contraseña</string>
    <string name="zip_code">Código postal</string>
    <string name="state">Estado</string>
    <string name="city">Ciudad</string>
    <string name="neighborhood">Colonia</string>
    <string name="street">Calle</string>
    <string name="ext_num">Número exterior</string>
    <string name="inner_num">Número interior</string>
    <string name="name">Nombre</string>
    <string name="web_page">Página web</string>
    <string name="type_market">Tipo de establecimiento</string>
    <string name="rfc">RFC</string>
    <string name="branch_name">Nombre de la sucursal</string>
    <string name="work_hours">Horario de servicio</string>
    <string name="account_name">Nombre de la cuenta</string>
    <string name="account_email">Correo electrónico de la cuenta</string>
    <string name="paypal_id_client">ID del cliente (PayPal)</string>
    <string name="paypal_secret_client">Secreto del cliente (PayPal)</string>
    <string name="fingerprint_name">Nombre de la huella</string>
    <string name="connect_sensor">Conectar Sensor</string>
    <string name="capture_fingerprint">Capturar huella</string>

    <!-- Titles -->
    <string name="user_type_title"><u>Tipo de usuario</u></string>
    <string name="client_title"><u>Cliente</u></string>
    <string name="market_title"><u>Establecimiento</u></string>
    <string name="branch_title"><u>Sucursal</u></string>
    <string name="address_title"><u>Dirección</u></string>
    <string name="account_title"><u>Cuenta (PayPal)</u></string>
    <string name="fingerprints_title"><u>Huellas dactilares</u></string>
    <string name="fingerprint_capture_title"><u>Capturar huella</u></string>
    <string name="paired_devices"><u>Dispositivos emparejados</u></string>
    <string name="recover_password_title"><u>Recuperar Contraseña</u></string>
    <string name="outstanding_payments_title"><u>Pagos pendientes</u></string>

    <!-- Hint texts -->
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_nombre_s">Nombre(s)</string>
    <string name="hint_apellidos_s">Apellidos(s)</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_date">YYYY-MM-DD</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_web_page">Página Web</string>
    <string name="hint_type_market">Abarrotes</string>
    <string name="hint_rfc">QWER101010PP6</string>
    <string name="hint_work_hours">09:00–19:00</string>
    <string name="hint_zip_code">00245</string>
    <string name="hint_state">Estado</string>
    <string name="hint_city">Ciudad</string>
    <string name="hint_neighborhood">Colonia</string>
    <string name="hint_street">Calle</string>
    <string name="hint_inner_num">45</string>
    <string name="hint_ext_num">3-A</string>
    <string name="hint_account_name">Cuenta Principal</string>
    <string name="hint_account_id_client">ID PayPal</string>
    <string name="hint_account_secret">Secreto PayPal</string>
    <string name="hint_fingerprint_name">Huella principal</string>

    <!-- Instructions -->
    <string name="catch_number">Se capturarán 5 muestras de la misma huella</string>
    <string name="a_number">Un número</string>

    <!-- Strings have not been classified yet -->
    <string name="bluetooth">Bluetooth</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="send">Enviar</string>
    <string name="hint_code">Código</string>
    <string name="code">Código</string>
    <string name="i_know">Enterado</string>
    <string name="a_state">Estado de la operación</string>
    <string name="menu">Menú</string>
    <string name="finish_operation">Operación finalizada</string>
    <string name="notification">Notification</string>
    <string name="close">Cerrar</string>
    <string name="occurred_error">Un error ocurrio durante el proceso.</string>
    <string name="successful_operation">Operación exitosa</string>
    <string name="cancel">Cancelar</string>
    <string name="none">None</string>
    <string name="try_again">Reintentar</string>
    <string name="close_app">Cerrar app</string>
    <string name="error">Error</string>
    <string name="compleated">Completado</string>
    <string name="not_valid_credentials">Credenciales no validas</string>
    <string name="markets">Tiendas</string>
    <string name="credits">Créditos</string>
    <string name="profile">Perfil</string>
    <string name="make">Realizar</string>
    <string name="add">Añadir</string>
    <string name="payments">Pagos</string>
    <string name="setting">Configuración</string>
    <string name="name_field">Name Name Name Name Name</string>
    <string name="credit_id">123698548</string>
    <string name="amount_field">$1598632.00</string>
    <string name="a_button">Un botón</string>
    <string name="id_text">ID: </string>
    <string name="credit_id_with_type">12365478 (global)</string>
    <string name="maket_id">MKT-a2def382706b4609977391ceac1ef287</string>
    <string name="type_movement">Tipo de movimiento</string>
    <string name="extra_information_example">Egreso (PayPal)</string>
    <string name="without_credits">Sin Créditos Registrados</string>
    <string name="without_markets">Sin Tiendas Registradas</string>
    <string name="id_user_text">ID usuario:</string>
    <string name="id_user_example">489</string>
    <string name="name_ref">Nombre:</string>
    <string name="email_ref">Email:</string>
    <string name="phone_ref">Teléfono:</string>
    <string name="birthdate_ref">Fecha de nacimiento:</string>
    <string name="id_client_ref">ID cliente:</string>
    <string name="id_client_example">CLI-a2def382706b4609977391ceac1ef287</string>
    <string name="id_address_ref">ID dirección:</string>
    <string name="zip_code_ref">Código postal:</string>
    <string name="zip_code_example">00458</string>
    <string name="state_ref">Estado:</string>
    <string name="city_ref">Ciudad:</string>
    <string name="neighborhood_ref">Colonia:</string>
    <string name="street_ref">Calle:</string>
    <string name="ext_number_ref">Número exterior:</string>
    <string name="inner_num_ref">Número interior:</string>
    <string name="fingerprint_name_ref">Nombre huella:</string>
    <string name="date_ref">Fecha:</string>
    <string name="id_fingerprint_ref">ID huella:</string>
    <string name="id_fingerprint_example">FNP-a2def382706b4609977391ceac1ef287</string>
    <string name="web_page_ref">Página web:</string>
    <string name="id_market_ref">ID tienda:</string>
    <string name="work_hours_ref">Horario de servicio:</string>
    <string name="alias_account_ref">Alias cuenta:</string>
    <string name="id_account_ref">ID cuenta:</string>
    <string name="outstanding_id_ref">ID pago pendiente:</string>
    <string name="amount_ref">Monto:</string>
    <string name="last_cash_ref">Último cierre:</string>
    <string name="new_credit">Nuevo crédito</string>
    <string name="new_client">Nuevo cliente</string>
    <string name="movements">Movimientos</string>
    <string name="deposit">Depositar</string>
    <string name="pay">Pagar</string>
    <string name="transfer">Transferir</string>
    <string name="withdraw">Retirar</string>
    <string name="options_ref">Opciones:</string>
    <string name="logout">Cerrar sesión</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="notifications">Notificaciones</string>
    <string name="close_session_question">¿Está seguro de finalizar la sesión?</string>
    <string name="finish">Finalizar</string>
    <string name="session">Sesión</string>
    <string name="branch">Sucursal</string>
    <string name="without_payments">Sin pagos registrados</string>
    <string name="credit_detail">Detalle del crédito</string>
    <string name="without_movements">Sin movimientos registrados</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="closing_session">Cerrando sesión…</string>
    <string name="pay_method">Medio de pago</string>
    <string name="credit">Crédito</string>
    <string name="paypal">PayPal</string>
    <string name="hint_credit">Crédito</string>
    <string name="hint_market_id">MKT-87fd029bc6cc436083b7ba3f9ad4aaaa</string>
    <string name="amount">Monto</string>
    <string name="summary">Resumen</string>
    <string name="origin_credit">Crédito origen</string>
    <string name="destination_credit">Crédito destino</string>
    <string name="depositor_name">Nombre del depositante</string>
    <string name="paypal_required">Este movimiento requiere cuenta de PayPal</string>
    <string name="depositor_data">Datos del depositante</string>
    <string name="new_market">Nueva tienda</string>
    <string name="sign_up_title">Registrar</string>
    <string name="create">Crear</string>
    <string name="data_credit">Datos del Crédito</string>
    <string name="client_email">Email del cliente</string>
    <string name="credit_alias">Alias del crédito</string>
    <string name="auth">Autorizar</string>
    <string name="client_name">Nombre del Cliente</string>
    <string name="market_name">Nombre de la Tienda</string>
    <string name="movement">Movimiento</string>
    <string name="method">Medio</string>
    <string name="ok_result_movement">Movimiento realizado exitosamente</string>
    <string name="bad_result_movement">No se pudo efectuar el movimiento</string>
    <string name="bluetooth_turn_on">Bluetooth prendido</string>
    <string name="error_bluetooth_not_turn_on">No se pudo encender el bluetooth</string>
    <string name="bluetooth_already_on">El bluetooth ya estaba prendido</string>
    <string name="no_devices_paired">Ningun dispositivo emparejado</string>
    <string name="disconnect">Desconectar</string>
    <string name="verify">Verificar</string>
    <string name="executing_movement">Ejecutando movimiento…</string>
    <string name="connecting_paypal">Conectando con PayPal…</string>
    <string name="finishing_movement">Finalizando movimiento…</string>


</resources>