<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.fragments.MovementSummaryFragment">

    <RelativeLayout
        android:id="@+id/rl_summary_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@drawable/shape_backgroud_progress_bar"
        android:elevation="@dimen/small_elevation"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pb_summary_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_summary_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/highlight_text"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_summary_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_margin"
        android:background="@drawable/shape_main_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/summary"
            android:textColor="@color/mate_white"
            android:textSize="@dimen/big_highlight_text"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_pay_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middle_margin"
                android:elevation="@dimen/middle_elevation"
                app:cardCornerRadius="@dimen/small_round_corner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_card"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_margin"
                        android:layout_marginTop="@dimen/middle_margin"
                        android:layout_marginEnd="@dimen/middle_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:text="@string/type_movement"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h1_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_type_movement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/middle_small_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/highlight_text"
                        android:textStyle="bold"
                        tools:text="@string/movements" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_margin"
                        android:layout_marginTop="@dimen/middle_margin"
                        android:layout_marginEnd="@dimen/middle_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:text="@string/amount"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h1_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_amount_movement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/middle_small_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/small_highlight_text"
                        android:textStyle="bold"
                        tools:text="@string/amount_field" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_margin"
                        android:layout_marginTop="@dimen/middle_margin"
                        android:layout_marginEnd="@dimen/middle_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:text="@string/pay_method"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h1_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_method_movement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/middle_small_margin"
                        android:layout_marginBottom="@dimen/middle_big_margin"
                        android:gravity="center_horizontal"
                        android:textColor="@color/shiny_blue"
                        android:textSize="@dimen/small_highlight_text"
                        android:textStyle="bold"
                        tools:text="@string/paypal" />

                    <TextView
                        android:id="@+id/tv_origin_credit_movement_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_margin"
                        android:layout_marginEnd="@dimen/middle_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:text="@string/origin_credit"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h1_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_origin_credit_movement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/middle_small_margin"
                        android:layout_marginBottom="@dimen/middle_big_margin"
                        android:gravity="center_horizontal"
                        android:textColor="@color/shiny_blue"
                        android:textSize="@dimen/small_highlight_text"
                        android:textStyle="bold"
                        tools:text="@string/credit_id" />

                    <TextView
                        android:id="@+id/tv_destination_credit_movement_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_margin"
                        android:layout_marginEnd="@dimen/middle_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:text="@string/destination_credit"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h1_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_destination_credit_movement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/middle_small_margin"
                        android:layout_marginBottom="@dimen/middle_big_margin"
                        android:gravity="center_horizontal"
                        android:textColor="@color/shiny_blue"
                        android:textSize="@dimen/small_highlight_text"
                        android:textStyle="bold"
                        tools:text="@string/credit_id" />

                    <TextView
                        android:id="@+id/tv_market_movement_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_margin"
                        android:layout_marginEnd="@dimen/middle_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:text="@string/market"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h1_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_market_movement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/middle_small_margin"
                        android:layout_marginBottom="@dimen/middle_big_margin"
                        android:gravity="center_horizontal"
                        android:textColor="@color/shiny_blue"
                        android:textSize="@dimen/h1_text"
                        android:textStyle="bold"
                        tools:text="@string/hint_market_id" />

                    <TextView
                        android:id="@+id/tv_depositor_name_movement_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_margin"
                        android:layout_marginEnd="@dimen/middle_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:text="@string/depositor_name"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h1_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_depositor_name_movement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/middle_small_margin"
                        android:layout_marginBottom="@dimen/middle_big_margin"
                        android:gravity="center_horizontal"
                        android:textColor="@color/shiny_blue"
                        android:textSize="@dimen/h1_text"
                        android:textStyle="bold"
                        tools:text="@string/name_field" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_small_margin"
                android:layout_marginEnd="@dimen/middle_small_margin"
                android:layout_marginBottom="@dimen/middle_big_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/b_cancel_movement"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_weight="1"
                    android:background="@drawable/shape_close_button"
                    android:text="@string/cancel"
                    android:textColor="@color/red"
                    android:textSize="@dimen/h2_text"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b_make_movement"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_weight="1"
                    android:background="@drawable/shape_main_button"
                    android:text="@string/make"
                    android:textColor="@color/mate_white"
                    android:textSize="@dimen/h2_text"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>