<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.MovementFinishedFragment">

    <TextView
        android:id="@+id/tv_movement_finished_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_big_margin"
        android:text="@string/loading"
        android:textColor="@color/mate_white"
        android:textSize="@dimen/highlight_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:contentDescription="@string/a_state"
        android:src="@drawable/ic_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_movement_finished_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/middle_height_button"
        android:layout_marginStart="@dimen/very_big_margin"
        android:layout_marginTop="@dimen/middle_margin"
        android:layout_marginEnd="@dimen/very_big_margin"
        android:layout_marginBottom="@dimen/middle_big_margin"
        android:background="@drawable/shape_secondary_button"
        android:enabled="false"
        android:text="@string/i_know"
        android:textColor="@color/mate_white"
        android:textSize="@dimen/h1_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>